# nemo-agent-toolkit-production-ops

./: .env.example  .gitignore  README.md  pyproject.toml
ch06-rag-milvus/: docker-compose.yml
ch06-rag-milvus/scripts/: ingest_internal_docs.py  query_smoke.py
datasets/internal-docs/: README.md
datasets/internal-docs/department-notes/: 01-sales-customer-handling.md  02-hr-transfer-procedures.md  03-it-staff-directory.md  04-management-board-memo.md
datasets/internal-docs/faq/: 01-expense-faq.md  02-it-support-faq.md  03-holiday-faq.md
datasets/internal-docs/handbook/: 01-onboarding.md  02-office-rules.md  03-benefits.md
datasets/internal-docs/it-security/: 01-account-policy.md  02-device-policy.md  03-incident-response.md  04-remote-work.md
datasets/internal-docs/product/: 01-product-overview.md  02-api-reference.md
poc/langfuse/: .env.example
poc/nat-guardrails/: Dockerfile  docker-compose.yml  workflow.yml
poc/nat-guardrails/config/: config.yml  prompts.yml
poc/nat-guardrails/graphs/: guarded_graph.py
poc/nat-langfuse/: .env.example  docker-compose.yml  workflow.yml
poc/nat-langgraph/: docker-compose.yml  workflow.yml
poc/nat-langgraph/graphs/: echo_graph.py
poc/nat-multilingual-safety/: docker-compose.yml  workflow.yml
poc/nat-multilingual-safety/config/: config.yml  prompts.yml
poc/nat-prompts/: Dockerfile  docker-compose.yml  workflow.yml
poc/nat-rag-langgraph/: docker-compose.yml  workflow.yml
poc/nat-supervisor/: docker-compose.yml  workflow.yml
poc/screenshots/: take_screenshots.py
scripts/: generate_cover.py
(+4 files in other folders)
